--- a/mod/mods/CrowdControl/manifest.json
+++ b/mod/mods/CrowdControl/manifest.json
@@ -1,9 +1,9 @@
 {
     "id": "CrowdControl",
     "name": "Crowd Control",
-    "version": "1.0.2",
+    "version": "1.1.0",
     "description": [
-        "Adds support for Crowd Control integration",
+        "Crowd Control is a mod that allows your livestream viewers on any platform to interact with your game. Twitch, YouTube, TikTok and more!",
 	"http://crowdcontrol.live"
     ],
     "author": "dtothefourth",
